[tool.poetry]
name = "direktor"
version = "1.0.0"
description = "A redirect service"
authors = ["Josh Smeaton <josh.smeaton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"
ipdb = "^0.13.2"
isort = "^4.3.21"
flake8 = "^3.8.1"
mypy = "^0.770"
pre-commit = "^2.4.0"
black = "^19.10b0"
pytest = "^5.4.2"
requests = "^2.23.0"
flake8-blind-except = "^0.1.1"
flake8-comprehensions = "^3.2.2"
flake8-pep3101 = "^1.3.0"
flake8-print = "^3.1.4"
flake8-debugger = "^3.2.1"
locust = "^1.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
